--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="card-container">
       <div class="card-one">
-        <img src="/istockphoto-910856488-612x612.jpg" alt="" />
+        <img src="istockphoto-910856488-612x612.jpg" alt="" />
         <div class="card-title">
           <h3>Lelah Nicohls</h3>
           <p style="margin-top: 10px">Troy, MI</p>
@@ -72,7 +72,7 @@
       </div>
 
       <div class="card-four">
-        <img src="/portrait.jpg" alt="" />
+        <img src="portrait.jpg" alt="" />
         <div class="card-title">
           <b><h3>Robert Brower</h3></b>
           <p style="margin-top: 10px">Cincinnati, OH</p>
@@ -84,7 +84,7 @@
       </div>
 
       <div class="card-five">
-        <img src="/images.jpeg" alt="" />
+        <img src="images.jpeg" alt="" />
         <div class="card-title">
           <b><h3>Amy Campbell</h3></b>
           <p style="margin-top: 10px">Warrior, AL</p>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="card-six">
-        <img src="/ryanfawwaz1.jpg" alt="" />
+        <img src="ryanfawwaz1.jpg" alt="" />
         <div class="card-title">
           <h3>Anthony S.Morin</h3>
           <p style="margin-top: 10px">Lyndhurst, NJ</p>
